<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.warehouse.activities.WarehouseActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/whouse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#009688"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:background="@drawable/whouse"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stockName"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_margin="8dp"
                    android:background="#ffffff"
                    android:hint="@string/hint_stockName"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorBox"
                    android:textSize="14sp"
                    app:boxStrokeColor="#fff" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stockQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:layout_margin="8dp"
                    android:background="#ffffff"
                    android:hint="@string/hint_stockQuantity"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorBox"
                    android:textSize="14sp"
                    app:boxStrokeColor="#fff" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:layout_margin="8dp"
                    android:background="#ffffff"
                    android:hint="@string/hint_country"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorBox"
                    android:textSize="14sp"
                    app:boxStrokeColor="#fff" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/palletType"
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:layout_margin="8dp"
                    android:background="#ffffff"
                    android:hint="@string/hint_palletType"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorBox"

                    android:textSize="14sp"
                    app:boxStrokeColor="#fff" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/palletNumber"
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:layout_margin="8dp"
                    android:background="#ffffff"
                    android:hint="@string/hint_palletNumber"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorBox"
                    android:textSize="14sp"
                    app:boxStrokeColor="#fff" />



<!--                <Button-->
<!--                    android:id="@+id/garageLocation"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="16dp"-->
<!--                    android:background="#0027FF"-->
<!--                    android:paddingTop="8dp"-->
<!--                    android:paddingBottom="8dp"-->
<!--                    android:stateListAnimator="@null"-->
<!--                    android:text="@string/button_location"-->
<!--                    android:textColor="@color/colorPrimary"-->
<!--                    android:textSize="16sp" />-->

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="#0027FF"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addStock"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
